fix select styling on dark mode on chrome

--- a/app/components/Input/Input.module.css
+++ b/app/components/Input/Input.module.css
@@ -85,7 +85,6 @@
 }
 
 .select-wrapper select {
-  background: none;
   appearance: none;
   cursor: pointer;
   width: 100%;
